<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/backimg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="25dp"
                    android:text="SIGN UP"
                    android:textColor="#3549B8"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:backgroundTint="#3549B8"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/semail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:backgroundTint="#3549B8"
                    android:ems="10"
                    android:hint="@string/emailid"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/spassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:backgroundTint="#3549B8"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="HardcodedText,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:backgroundTint="#3549B8"
                    android:ems="10"
                    android:hint="@string/Mobileno"
                    android:minHeight="48dp"
                    tools:ignore="VisualLintTextFieldSize" />

                <Button
                    android:id="@+id/signup12"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3549B8"
                    android:text="Sign up"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/ilogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/already_have_an_account_Login"
                    android:textSize="15sp"
                    android:textStyle="italic" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>